logs/django-pki.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/django_pki-0.20.0.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pki'...
Compiling './lib/python3.5/site-packages/pki/admin.py'...
***   File "./lib/python3.5/site-packages/pki/admin.py", line 19
    os.mkdir( PKI_DIR, 0750 )
                          ^
SyntaxError: invalid token

Compiling './lib/python3.5/site-packages/pki/email.py'...
***   File "./lib/python3.5/site-packages/pki/email.py", line 10
    except ImportError, e:
                      ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pki/fixtures'...
Compiling './lib/python3.5/site-packages/pki/graphviz.py'...
***   File "./lib/python3.5/site-packages/pki/graphviz.py", line 8
    except ImportError, e:
                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pki/helper.py'...
***   File "./lib/python3.5/site-packages/pki/helper.py", line 180
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pki/management'...
Compiling './lib/python3.5/site-packages/pki/management/__init__.py'...
Listing './lib/python3.5/site-packages/pki/management/commands'...
Compiling './lib/python3.5/site-packages/pki/management/commands/__init__.py'...
Compiling './lib/python3.5/site-packages/pki/management/commands/test.py'...
***   File "./lib/python3.5/site-packages/pki/management/commands/test.py", line 7
    except AttributeError, e:
                         ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pki/media'...
Listing './lib/python3.5/site-packages/pki/media/pki'...
Listing './lib/python3.5/site-packages/pki/media/pki/css'...
Listing './lib/python3.5/site-packages/pki/media/pki/img'...
Listing './lib/python3.5/site-packages/pki/media/pki/js'...
Listing './lib/python3.5/site-packages/pki/migrations'...
Compiling './lib/python3.5/site-packages/pki/migrations/0001_initial.py'...
Compiling './lib/python3.5/site-packages/pki/migrations/0002_auto__add_field_certificateauthority_crl_distribution.py'...
Compiling './lib/python3.5/site-packages/pki/migrations/0003_auto__add_pkichangelog.py'...
Compiling './lib/python3.5/site-packages/pki/migrations/0004_auto__add_keyusage__add_x509extension__add_extendedkeyusage__del_field.py'...
Compiling './lib/python3.5/site-packages/pki/migrations/0005_load_eku_and_ku_fixture.py'...
Compiling './lib/python3.5/site-packages/pki/migrations/0006_update_objects_to_x509_extensions.py'...
Compiling './lib/python3.5/site-packages/pki/migrations/0007_auto__del_field_certificateauthority_subcas_allowed.py'...
Compiling './lib/python3.5/site-packages/pki/migrations/0008_auto__del_field_certificate_cert_extension.py'...
Compiling './lib/python3.5/site-packages/pki/migrations/0009_auto__del_field_certificateauthority_type.py'...
Compiling './lib/python3.5/site-packages/pki/migrations/0010_auto__del_field_certificate_pem_encoded__del_field_certificateauthorit.py'...
Compiling './lib/python3.5/site-packages/pki/migrations/0011_add_pki_download_permission.py'...
Compiling './lib/python3.5/site-packages/pki/migrations/0012_auto__add_unique_keyusage_name__add_unique_extendedkeyusage_name.py'...
Compiling './lib/python3.5/site-packages/pki/migrations/0013_auto__add_field_certificate_crl_dpoints__del_field_certificateauthorit.py'...
Compiling './lib/python3.5/site-packages/pki/migrations/__init__.py'...
Compiling './lib/python3.5/site-packages/pki/openssl.py'...
***   File "./lib/python3.5/site-packages/pki/openssl.py", line 34
    dirs = { 'certs'  : 0755,
                           ^
SyntaxError: invalid token

Listing './lib/python3.5/site-packages/pki/templates'...
Listing './lib/python3.5/site-packages/pki/templates/admin'...
Listing './lib/python3.5/site-packages/pki/templates/admin/pki'...
Listing './lib/python3.5/site-packages/pki/templates/pki'...
Listing './lib/python3.5/site-packages/pki/templatetags'...
Listing './lib/python3.5/site-packages/pki/tests'...
Compiling './lib/python3.5/site-packages/pki/tests/__init__.py'...
***   File "./lib/python3.5/site-packages/pki/tests/__init__.py", line 24
    os.mkdir(PKI_DIR, 0700)
                         ^
SyntaxError: invalid token

Listing './lib/python3.5/site-packages/pki/tests/windmilltests'...
Compiling './lib/python3.5/site-packages/pki/tests/windmilltests/test_01_create_rootca.py'...
Compiling './lib/python3.5/site-packages/pki/tests/windmilltests/test_02_create_subca.py'...
Compiling './lib/python3.5/site-packages/pki/tests/windmilltests/test_03_create_certificate.py'...
Compiling './lib/python3.5/site-packages/pki/tests/windmilltests/test_99_views_without_login.py'...
Compiling './lib/python3.5/site-packages/pki/views.py'...
***   File "./lib/python3.5/site-packages/pki/views.py", line 95
    except OSError,e:
                  ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
